--- a/tags.html
+++ b/tags.html
@@ -3,7 +3,7 @@ layout: page
 title: 'Tag Index'
 ---
 
-{% assign date_format = site.date_format | default: "%B %-d, %Y" %}
+<!-- {% assign date_format = site.date_format | default: "%B %-d, %Y" %}
 
 {%- capture site_tags -%}
     {%- for tag in site.tags -%}
@@ -14,7 +14,7 @@ title: 'Tag Index'
 
 {%- for tag in tags_list -%}
     <a href="#{{- tag -}}" class="btn btn-primary tag-btn"><i class="fas fa-tag" aria-hidden="true"></i>&nbsp;{{- tag -}}&nbsp;({{site.tags[tag].size}})</a>
-{%- endfor -%}
+{%- endfor -%} -->
 
 <div id="full-tags-list">
 {%- for tag in tags_list -%}
